# watchpuppy2

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: change-validation.yml  filesystem-proof-hosted.yml  filesystem-proof-self-hosted-windows.yml  filesystem-proof-self-hosted.yml  test-suite.yml
demo/cifs_share/: Dockerfile  Dockerfile.samba  README.md  _mount_share.py  docker-compose.yml  smb.conf  watchdog_demo.py  watchpuppy2_demo.py  writer_demo.py
demo/linux_bind_mount/: README.md  docker-compose.yml  watchdog_demo.py  watchpuppy2_demo.py  writer_demo.py
scripts/: run-proof-scenario.sh
src/watchpuppy2/: __init__.py  _observer.py  api.py
tests/repo_rules/: test_visibility.py
tests/watchpuppy2/: test__observer.py  test_api.py
